--- a/vignettes/process-landscape.Rmd
+++ b/vignettes/process-landscape.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Process Landscape Data"
-subtitle: "Download and process OpenStreetMap and satellite data"
+subtitle: "Download, process and summarise landscape data at point locations"
 author: "Edwin Tan"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
@@ -10,7 +10,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-This article details various ways to download and process publicly available landscape data to build predictive models of animal diversity. Here, landscape data refers to data derived from both open-source maps and freely-available satellite data. The following outline includes methods to download, process and summarise the landscape data for a specified date range and spatial areas.
+This article details various ways to download and process landscape data to build predictive models of animal diversity. For example, the landscape data may be derived from open-source maps, publicly-available satellite data, or manually generated sources (e.g., on-site mapping, design scenarios). 
 
 First, load the necessary packages to run the analysis:
 
@@ -28,22 +28,8 @@ library("dplyr")
 library("tmap")
 ```
 
-The Punggol (`PG`) area (town) in Singapore from the example data `sampling_areas` will be used to demonstrate the steps in this article, shown in the interactive map below.
 
-```{r plot punggol area, warning = FALSE, message = FALSE, fig.height = 1.0, dpi = 300, out.width="50%", fig.align='center'}
-
-data(sampling_areas)
-
-sampling_areas <- sampling_areas %>%
-   filter(area == "PG")
-
-tmap_mode("view")
-tm_basemap(c("CartoDB.Positron")) +
-  tm_shape(sampling_areas) + tm_borders(lwd = 2.0)
-```
-<br>
-
-Finally, since this analysis involves the downloading of datasets, define an output directory for raw and processed data to be exported to:
+Next, define an output directory for raw and processed data to be exported to:
 
 ```{r define output directories, warning = FALSE, message = FALSE, eval = FALSE}
 output_dir <- "</FILEPATH/TO/DIRECTORY>"
@@ -51,9 +37,23 @@ output_dir <- "</FILEPATH/TO/DIRECTORY>"
 
 <br>
 
+The Punggol (`PG`) area (town) in Singapore from the example data `sampling_areas` will be used as demonstration in this article.
+
+```{r plot punggol area, warning = FALSE, message = FALSE, fig.height = 1.0, dpi = 300, out.width="50%", fig.align='center'}
+
+data(sampling_areas)
+
+sampling_areas <- sampling_areas %>%
+   filter(area == "PG")
+```
+
+<br>
+
+---
+
 ## OpenStreetMap (OSM) data
 
-Built elements of the landscape can be retrieved from the OpenStreetMap (OSM) database. Building polygons and road lines will be extracted from `sampling_areas` using the functions `get_buildings_osm()` and `get_roads_osm()` respectively. The `date` argument, if specified, must be a snapshot date present within the [Geofabrik database](https://download.geofabrik.de). If not, the latest data will be downloaded. In this example, we download these urban elements for the date 1 Jan 2021 and visualise them below:
+Built elements of the landscape can be retrieved from the OpenStreetMap (OSM) database. Building polygons and road lines will be extracted from `sampling_areas` using the functions `get_buildings_osm()` and `get_roads_osm()` respectively. The `date` argument, if specified, must be a snapshot date present within the [Geofabrik database](https://download.geofabrik.de). If not, the latest data will be downloaded. In this example, we download these urban elements for the date 1 Jan 2021.
 
 ```{r download urban elements, eval = FALSE}
 
@@ -67,79 +67,77 @@ roads <- get_roads_osm(sampling_areas,
                        date = as.Date("2021-01-01"),
                        dir_raw = paste0(output_dir, "/osm"))
 
+# alternatively, load example dataset from package
+filepath <- system.file("extdata", "osm_data.Rdata", package = "biodivercity")
+load(filepath)
+```
+
+```{r load example dataset of osm elements, echo = FALSE}
+filepath <- system.file("extdata", "osm_data.Rdata", package = "biodivercity")
+load(filepath)
+```
+
+
+<br>
+
+We can generate summary metrics for the OSM data, at point locations where animal data are available (e.g., animal surveys have been conducted). In this example, we randomly generate three points within the `sampling_areas`, and visualise the datasets in a interactive map:
+
+```{r eval = FALSE}
+
+set.seed(30)
+points <- st_sample(sampling_areas, 3) %>% 
+  st_as_sf() %>% 
+  mutate(point_id = row.names(.)) # unique identifier
+
 tmap_mode("view")
 tm_basemap(c("CartoDB.Positron")) +
   tm_shape(sampling_areas) + tm_borders() +
   tm_shape(buildings) + tm_polygons(col = "levels") +
-  tm_shape(roads) + tm_lines(col = "lanes", palette = "YlOrRd")
+  tm_shape(roads) + tm_lines(col = "lanes", palette = "YlOrRd")+
+  tm_shape(points) + tm_dots()
 ```
 
 ```{r echo = FALSE, warning = FALSE, message = FALSE, fig.width=2.6, fig.height = 2.0, dpi = 300, out.width="100%"}
 
-filepath <- system.file("extdata", "osm_data.Rdata", package = "biodivercity")
-load(filepath)
+set.seed(30)
+points <- st_sample(sampling_areas, 3) %>% 
+  st_as_sf() %>% 
+  mutate(point_id = row.names(.)) # unique identifier
 
 tmap_mode("view")
 tm_basemap(c("CartoDB.Positron")) +
   tm_shape(sampling_areas) + tm_borders() +
   tm_shape(buildings) + tm_polygons(col = "levels") +
-  tm_shape(roads) + tm_lines(col = "lanes", palette = "YlOrRd")
+  tm_shape(roads) + tm_lines(col = "lanes", palette = "YlOrRd")+
+  tm_shape(points) + tm_dots()
 ```
-
 <br>
 
-### Summarise OSM metrics
+The function `calc_osm()` can be be used to summarise the following metrics of buildings and roads, at multiple buffer radii. 
 
-We can summarise various metrics for the downloaded datasets, at specific point locations and buffer radii. In this example, we randomly generate three points within the `sampling_areas`.
-
-```{r}
-set.seed(123)
-
-points <- st_sample(sampling_areas, 3) %>% 
-  st_as_sf() %>% 
-  mutate(point_id = row.names(.)) # unique identifier
-```
-
-The following lists the possible metrics that may be summarised from the downloaded OSM data:
-
-- Buildings (polygons) each with the number of levels
+- Buildings (polygons):
     - Building footprint area (`buildingArea_m2`)
-    - Building gross floor area (`buildingGFA_m2`)
-    - Average number of levels (`buildingAvgLvl`)
-    - Building Volume (`buildingVol_m3`)
-    - Floor area ratio (`buildingFA_ratio`)    
+    - Building gross floor area (`buildingGFA_m2`) - _Column for the no. of levels must be present_
+    - Average number of levels (`buildingAvgLvl`) - _Column for the no. of levels must be present_
+    - Building Volume (`buildingVol_m3`) - _Column for height must be present_
+    - Floor area ratio (`buildingFA_ratio`) - _Column for the no. of levels must be present_    
 
-- Roads (lines) each with the number of lanes 
-    - Total lane length (`lanelength`)
-    - Lane density (`laneDensity`)
-    
+- Roads (lines):
+    - Total lane length (`lanelength`) - _Column for the no. of lanes must be present_
+    - Lane density (`laneDensity`) - _Column for the no. of lanes must be present_
+
 <br>
 
-The function `calc_osm()` can be be used to generate the summaries, at multiple buffer radii. This returns a list, with each element corresponding to a particular buffer size. For example, all building metrics can be calculated, up to `100` and `200` metres away from `points`:
+For example, calculate building metrics up to `100` and `200` metres away from `points`. This returns a list, with each element corresponding to a particular buffer radius. Column names include a prefix indicating that values are from OpenStreetMap (`osm_`).
 
-```{r calc_osm, warning = FALSE, message = FALSE, eval = FALSE}
+```{r calc_osm, warning = FALSE, message = FALSE}
 
-calc_osm(vector = buildings, points = points,
-                name = "buildings",
-                buffer_sizes = c(100, 200),
-                building_levels = "levels") 
+calc_osm(vector = buildings, 
+         points = points,
+         name = "buildings",
+         buffer_sizes = c(100, 200),
+         building_levels = "levels") 
 
-```
-
-
-Alternatively, the function `calc_specific_osm()` can be used to generate the metrics specified by their name. To do so, we need to supply a character vector of predictor names to the function argument `predictors_osm`. The naming format is `r<value>m_osm_<metric>`; the prefix `r<value>m` denotes the buffer radius that the particular landscape data was summarised within, and `_osm_` denotes that the variables are based on OpenStreetMap data. For example, we can summarise the building floor area ratio at a radius of 100 m and 200 m around `points`–these variables are appended as new columns.
-
-```{r calc_specific_osm, warning = FALSE, message = FALSE}
-
-# variables to summarise
-predictors <- c("r100m_osm_buildingFA_ratio", "r200m_osm_buildingFA_ratio") 
-
-points <- calc_specific_osm(vector_osm = buildings,
-                                    building_levels = "levels",
-                                    predictors_osm = predictors,
-                                    points = points)
-
-points
 ```
 
 <br>
@@ -148,11 +146,11 @@ points
 
 ## Sentinel-2 satellite data
 
-Land cover information can be derived from publicly available Sentinel-2 data, downloadable via the package [`sen2r`](http://sen2r.ranghetti.info/index.html). Numerous parameters can be defined, both programmatically and via a graphical user interface as follows. It also allows us to run pre-processing steps such as cloud masking, atmospheric correction and the calculation of spectral indices. Refer to the website for more information on its [installation and use](http://sen2r.ranghetti.info/articles/installation.html).
+Land cover can be a useful predictor of animal diversity. For example, publicly-available data from Sentinel-2 may be downloaded using the package [`sen2r`](http://sen2r.ranghetti.info/index.html). The package includes data pre-processing steps such as cloud masking, atmospheric correction and the calculation of spectral indices.
 
 ```{r sen2r gui, eval = FALSE}
 library(sen2r)
-sen2r()
+sen2r() # view GUI
 ```
 
 
@@ -162,21 +160,19 @@ knitr::include_graphics("sen2r-gui.png", dpi = 300)
 
 <br>
 
-The same parameters can be specified as arguments within `sen2r()`, or loaded from a JSON file. In this example, we download data from 1 Jan to 30 Jun 2021, with not more than 15% cloud cover within `sampling_areas`. For each image, the spectral indices [`NDVI`](https://www.indexdatabase.de/db/i-single.php?id=58) and [`NDWI2`](https://www.indexdatabase.de/db/i-single.php?id=546) will also be processed; these will be used to map vegetation and water cover, respectively. Do note that you will need to enter your account credentials with the [ESA Sentinel Hub](https://scihub.copernicus.eu/dhus/#/home). Detailed steps and the use of other servers (e.g. Google Cloud) can be found on the [package website](http://sen2r.ranghetti.info/index.html).
+Data processing parameters can be specified as arguments within `sen2r()`, or loaded from a JSON file. In the example below, we download data from 1 Jan to 30 Jun 2021, with not more than 15% cloud cover within `sampling_areas`. For each image, the spectral indices [`NDVI`](https://www.indexdatabase.de/db/i-single.php?id=58) and [`NDWI2`](https://www.indexdatabase.de/db/i-single.php?id=546) are processed; these will be used to map vegetation and water cover, respectively. Do note that you will need to enter your account credentials for the [ESA Sentinel Hub](https://scihub.copernicus.eu/dhus/#/home). Detailed steps and the use of other servers (e.g. Google Cloud) can be found in the [package website](http://sen2r.ranghetti.info/index.html).
 
 ```{r sen2r, eval = FALSE}
 
 # create sub-directories
-dir.create(paste0(output_dir, "/sen2r")) 
-dir.create(paste0(output_dir, "/sen2r/raw"))
+dir.create(paste0(output_dir, "/sen2r")) # for processed output files
+dir.create(paste0(output_dir, "/sen2r/raw")) # for raw files
 
 out_paths <- sen2r(
-  param_list = sen2r_params,
   timewindow = as.Date(c("2021-01-01", "2021-06-30")),
   max_cloud_safe = 15, # max 15% cloud cover in raw tile
   max_mask = 15, # max 15% cloud cover over sampling_areas
   extent = geojsonsf::sf_geojson(sampling_areas) # needs geojson as input
-  extent_as_mask = TRUE, # pixel values outside are set to NA
   clip_on_extent = TRUE,
   list_indices = c("NDVI", "NDWI2") # to map vegetation and water
   list_rgb = "RGB432B", # output an RGB image as well
@@ -188,7 +184,7 @@ out_paths <- sen2r(
 
 <br>
 
-For each data type (e.g. spectral index), we can combine all raster images captured within the specified date range by averaging the pixel values across files, thus forming an image mosaic. This allows us to avoid relying on any one image for our analysis, and to deal with missing data (e.g. due to high cloud cover) during the period of interest. The function `mosaic_sen2r()` creates the mosaic by averaging the pixel values across the multiple rasters. It is a convenience function that processes the images based on the output folder structure of `sen2r()`; ensure that the function argument `parent_dir` in `mosaic_sen2r()` is similar to the function argument `path_out` in `sen2r()`.
+For each spectral index, we can combine all raster images captured within the specified date range by averaging the pixel values across files, thus forming an image mosaic. This allows us to avoid relying on any one image for our analysis, and to deal with missing data (e.g. due to high cloud cover) during the period of interest. The function `mosaic_sen2r()` creates the mosaic by averaging the pixel values across the multiple rasters. It is a convenience function that processes the images based on the output folder structure of `sen2r()`; ensure that the function argument `parent_dir` in `mosaic_sen2r()` is similar to the function argument `path_out` in `sen2r()`.
 
 ```{r mosaic generation, eval = FALSE}
 mosaic_sen2r(parent_dir = paste0(output_dir, "/sen2r"))
@@ -196,7 +192,7 @@ mosaic_sen2r(parent_dir = paste0(output_dir, "/sen2r"))
 
 <br>
 
-At this point, we have a single image mosaic (continuous raster) for each spectral index. While the continuous values from these rasters may be used directly in analyses, there may be instances were we want to work with discrete classes of land cover. One method is to separate pixels into one of two classes (e.g. vegetated or non-vegetated; water or non-water), based on an adaptively derived threshold value. For example, we can use Otsu's thresholding ([Otsu, 1979](https://cw.fel.cvut.cz/wiki/_media/courses/a6m33bio/otsu.pdf)), which tends to outperform other techniques in terms of stability of results and processing speed, even with the presence of > 2 peaks in the histogram of pixel values ([Bouhennache et al., 2019](https://www.tandfonline.com/doi/abs/10.1080/10106049.2018.1497094)). This may be implemented using the function `threshold_otsu()`. As an example, let's load the NDVI raster for the Punggol area in Singapore for subsequent classification. The NDVI is a measure of healthy green vegetation, based on the tendency of plants to reflect NIR & absorb red light. It ranges from -1 (non-vegetated) to 1 (densely vegetated). The figure below shows the histogram of NDVI values in Punggol, as well as the adaptively derived threshold value (vertical line).
+At this point, we have a single image mosaic (continuous raster) for each spectral index, for a given area/period of interest. While the continuous values from these rasters may be used directly in analyses, there may be instances were we want to work with discrete classes of land cover. To do so, we can classify pixels into one of two classes (e.g. vegetated or non-vegetated; water or non-water), based on an adaptively derived threshold value. For example, we can use Otsu's thresholding ([Otsu, 1979](https://cw.fel.cvut.cz/wiki/_media/courses/a6m33bio/otsu.pdf)), which tends to outperform other techniques in terms of stability of results and processing speed, even with the presence of > 2 peaks in the histogram of pixel values ([Bouhennache et al., 2019](https://www.tandfonline.com/doi/abs/10.1080/10106049.2018.1497094)). This can be implemented using the function `threshold_otsu()`. As an example, let's load the NDVI raster for the Punggol area in Singapore for subsequent classification. The NDVI is a measure of healthy green vegetation, based on the tendency of plants to reflect NIR & absorb red light. It ranges from -1 (non-vegetated) to 1 (densely vegetated). The figure below shows the histogram of NDVI values withiin Punggol, as well as the adaptively derived threshold value (vertical line).
 
 ```{r}
 ndvi_mosaic <- 
@@ -211,7 +207,7 @@ threshold
 histogram <- terra::hist(ndvi_mosaic, breaks = 70, yaxt = 'n')
 ```
 
-```{r echo = FALSE, fig.align='center', fig.height=4, fig.width = 5, warning = FALSE, message = FALSE, dpi = 300, out.width="70%", fig.cap="**Figure: Distribution of NDVI values across the Punggol area in Singapore, based on a mosaic of images collected from 2019-07-01 to 2021-06-30.**"}
+```{r echo = FALSE, fig.align='center', fig.height=4, fig.width = 5, warning = FALSE, message = FALSE, dpi = 300, out.width="70%", fig.cap="**Figure: Distribution of NDVI values across the Punggol area in Singapore, based on a mosaic of images collected from 2019-07-01 to 2021-06-30.** Pixel values to the right of the dashed line may be classified as 'vegetated', while those to the left are 'non-vegetated'."}
 plot(histogram, 
      xlab = "NDVI", xlim = c(-1, 1), main = "", yaxt = 'n',
       col = rgb(178/255,223/255,138/255, 0.5))
@@ -220,7 +216,7 @@ abline(v = threshold, col="black", lwd=2, lty = 2)
 
 <br>
 
-Note that the wrapper function `classify_image_binary()` directly classifies a continuous raster. It uses `threshold_otsu()` internally to define the threshold value. Run the function and visualise both the original NDVI and classified rasters (toggle the map layers to view each one separately).
+The function `classify_image_binary()` can be used to directly classify a continuous raster (e.g., image mosaic). Note that it uses `threshold_otsu()` internally to define the threshold value. See the map below to examine both the original NDVI and classified rasters within the Punggol area in Singapore (toggle the map layers to view each one separately).
 
 ```{r mosaic classification, warning = FALSE, message = FALSE, fig.width=2.6, fig.height = 2.0, dpi = 300, out.width="100%"}
 veg_classified <- classify_image_binary(ndvi_mosaic, threshold = "otsu")
@@ -234,9 +230,7 @@ tm_shape(veg_classified) +
 
 <br>
 
-### Summarise landscape metrics
-
-Landscape patterns (i.e., landscape metrics) can be quantified for each of land cover class within classified rasters, summarised at specific point locations and buffer radii. Landscape metrics can be calculated at various 'levels', or unit of analysis — _patch_, _class_, and _landscape_ (in order of widening spatial scale). Refer to the package [landscapemetrics](https://r-spatialecology.github.io/landscapemetrics/index.html) for more information.
+'Landscape metrics' can then be used to represent the composition and spatial patterns of land cover within the area of interest. For each classified raster, metrics can be summarised at specific point locations and at multiple buffer radii. Metrics can also be calculated at various 'levels', or unit of analysis — _patch_, _class_, and _landscape_ (in order of widening spatial scale). Refer to the package [landscapemetrics](https://r-spatialecology.github.io/landscapemetrics/index.html) for more information.
 
 ```{r info on landscape metrics, echo = FALSE}
 
@@ -272,29 +266,63 @@ rm(lsm)
 
 <br>
 
-Similar to the OSM data, we will use the `points` dataset, which were randomly generated within the `sampling_areas` earlier on. A wide variety of metrics may be summarised using the function `calc_lsm()`. The following example summarises all 'class-level' metrics for vegetation cover (`veg_classified`), up to `100` and `200` metres away from `points`
+Similar to the process for OSM data, we demonstrate here the calculation of landscape metrics for the `points` dataset. A wide variety of metrics can be summarised using the function `calc_lsm()`. The following example summarises all 'class-level' metrics for vegetation cover (`veg_classified`), up to `100` and `200` metres away from `points`. This returns a list, with each element corresponding to a particular buffer radius. Column names include a prefix indicating that values are landscape metrics derived from a classified raster (`lsm_`).
 
-```{r calc_lsm, eval = FALSE, warning = FALSE, message = FALSE}
+```{r calc_lsm, warning = FALSE, message = FALSE}
 calc_lsm(raster = veg_classified,
-                points = points,
-                buffer_sizes = c(100, 200), # in metres
-                level = c("class"),
-                class_names = c("veg"),
-                class_values = c(1)) # pixel value of class
+         points = points,
+         buffer_sizes = c(100, 200), # in metres
+         level = c("class"),
+         class_names = c("veg"), # land cover class name
+         class_values = c(1)) # pixel value of class
 ```
 
-Alternatively, the function `calc_specific_lsm()` can be used to generate the metrics specified by their name. Similar to `calc_specific_osm()`, we need to supply a character vector of predictor names to the function argument `predictors_lsm`. The naming format is `r<value>m_osm_<metric>`; the prefix `r<value>m` denotes the buffer radius that the particular landscape data was summarised within, and `_lsm_` denotes that the variables are landscape metrics. For example, we can summarise the percentage of vegetated landscape (`pland` metric) at a radius of 100 m and 200 m around `points`–these variables are appended as new columns.
+<br>
 
-```{r calc_specific_lsm, warning = FALSE, message = FALSE}
+---
 
-predictors <- c("r100m_lsm_veg_pland", "r200m_lsm_veg_pland") # variables to summarise
+## Manually generated data
 
-points <- calc_specific_lsm(raster = veg_classified,
-                                    predictors_lsm = predictors,
-                                    class_names = c("veg"),
-                                    class_values =  c(1),
-                                    points = points)
+There may be cases where you intend to summarise data that have been generated manually, for instance, from on-site mapping or artificial design scenarios (see `vignette("use-cases")`). In our work, all of such datasets were in vector format (points, polygons, lines); the function `calc_manual()` is provided for interested users, to calculate the following landscape predictors, at multiple buffer radii. Column names include a prefix indicating that values were manually generated (`man_`).
+    
+- Buildings (polygons):
+    - Building footprint area (`buildingArea_m2`)
+    - Building gross floor area (`buildingGFA_m2`) - _Column for the no. of levels must be present_
+    - Average number of levels (`buildingAvgLvl`) - _Column for the no. of levels must be present_
+    - Floor area ratio (`buildingFA_ratio`) - _Column for the no. of levels must be present_    
 
-points
+- Roads (lines):
+    - Total lane length (`lanelength`) - _Column for the no. of lanes must be present_
+    - Lane density (`laneDensity`) - _Column for the no. of lanes must be present_
+    
+- Trees (points):
+    - Count of trees (`tree_count`)
+    - Species richness of trees (`tree_sprich`) - _Column with species name must be present_
+
+- Shrubs (polygons):
+    - Percentage of landscape area with shrubs (`shrub_pland`)
+    - Species richness of shrubs (`shrub_sprich`) - _Column with species name must be present_
+
+- Turf (polygons):
+    - Percentage of landscape area with turf (`turf_pland`)
+
+- Natural vegetation (polygons):
+    - Percentage of landscape area with natural vegetation (`natveg_pland`)
+
+- Water (polygons):
+    - Percentage of landscape area with water (`water_pland`)
+
+<br>
+
+For example, we can summarise the species and count of trees up to `50` metres away from `points`. This returns a list, with each element corresponding to a particular buffer radius.
+
+```{r calculate metrics for manually generated data, message = FALSE}
+filepath <- system.file("extdata", "pg_layers.Rdata", package = "biodivercity")
+load(filepath)
+
+calc_manual(vector = trees, name = "trees",
+            points = points, buffer_sizes = 50,
+            plant_species = "species")
+
 ```
 
